@@ -146,6 +146,7 @@ class ProjectDetailsEndpoint(ProjectEndpoint):
             'sentry:default_environment': project.get_option('sentry:default_environment'),
             'sentry:reprocessing_show_hint': bool(project.get_option('sentry:reprocessing_show_hint', True)),
             'sentry:reprocessing_active': bool(project.get_option('sentry:reprocessing_active', False)),
+            'filters:blacklisted_ips': '\n'.join(project.get_option('sentry:blacklisted_ips', [])),
             'feedback:branding': project.get_option('feedback:branding', '1') == '1',
         }
         data['plugins'] = serialize([
@@ -292,6 +293,10 @@ class ProjectDetailsEndpoint(ProjectEndpoint):
             if 'sentry:reprocessing_show_hint' in options:
                 project.update_option('sentry:reprocessing_show_hint',
                     bool(options['sentry:reprocessing_show_hint']))
+            if 'filters:blacklisted_ips' in options:
+                project.update_option(
+                    'sentry:blacklisted_ips',
+                    clean_newline_inputs(options['filters:blacklisted_ips']))
 
             self.create_audit_entry(
                 request=request,
