@@ -167,7 +167,6 @@ const OrganizationStats = React.createClass({
         y: [
           dAccepted,
           dRejected,
-          dBlacklisted
         ]
       });
       oReceived += dReceived;
@@ -207,8 +206,7 @@ const OrganizationStats = React.createClass({
         id: projectId,
         received: pReceived,
         rejected: pRejected,
-        blacklisted: pBlacklisted,
-        accepted: pReceived - pRejected - pBlacklisted
+        accepted: Math.max(0, pReceived - pRejected - pBlacklisted),
       });
     });
     this.setState({
@@ -219,14 +217,11 @@ const OrganizationStats = React.createClass({
 
   renderTooltip(point, pointIdx, chart) {
     let timeLabel = chart.getTimeLabel(point);
-    let [accepted, rejected, blacklisted] = point.y;
+    let [accepted, rejected] = point.y;
 
     let value = `${intcomma(accepted)} accepted`;
     if (rejected) {
       value += `<br>${intcomma(rejected)} rate limited`;
-    }
-    if (blacklisted) {
-      value += `<br>${intcomma(blacklisted)} filtered`;
     }
 
     return (
@@ -245,10 +240,9 @@ const OrganizationStats = React.createClass({
           <div className="col-md-9">
             <p>{t(`The chart below reflects events the system has received
             across your entire organization. Events are broken down into
-            three categories: Accepted, Rate Limited, and Filtered. Rate
+            two categories: Accepted and Rate Limited. Rate
             Limited events are entries that the system threw away due to quotas
-            being hit, and Filtered events are events that were blocked
-            due to your data filters and blocklists.`)}</p>
+            being hit.`)}</p>
           </div>
           {!this.state.statsLoading &&
             <div className="col-md-3 stats-column">
@@ -267,7 +261,7 @@ const OrganizationStats = React.createClass({
                 <StackedBarChart
                   points={this.state.orgStats}
                   height={150}
-                  barClasses={['accepted', 'rate-limited', 'black-listed']}
+                  barClasses={['accepted', 'rate-limited']}
                   className="sparkline"
                   tooltip={this.renderTooltip} />
               </div>
