@@ -538,11 +538,6 @@ table.project-list {
         background: @red;
         min-height: 0;
       }
-
-      &.black-listed {
-        background: @orange-light;
-        min-height: 0;
-      }
     }
 
     &:hover span {
@@ -552,10 +547,6 @@ table.project-list {
 
       &.rate-limited {
         background: @red-dark;
-      }
-
-      &.black-listed {
-        background: @orange-dark;
       }
     }
   }
